Management: Fix text overflow on set custom photo button (#2937)

--- a/src/components/ui/ListItem.scss
+++ b/src/components/ui/ListItem.scss
@@ -449,3 +449,9 @@
     }
   }
 }
+
+.list-item-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
